# rpi-pico-benchmark

./: README.md
Arduino Nano/Arduino/Analog In/AI_benchmark/: AI_benchmark.ino
Arduino Nano/Arduino/Digital Out/DO_benchmark/: DO_benchmark.ino
Arduino Nano/Python/Analog In/: AI_benchmark.py  AI_functions.py
Arduino Nano/Python/Digital Out/: DO_benchmark.py  DO_functions.py
ESP32/Analog In/: AI_benchmark_core0.py  AI_functions_core0.py
ESP32/Digital Out/: DO_benchmark_core0.py
ESP8266/Analog In/: AI_benchmark_core0.py  AI_functions_core0.py
ESP8266/Digital Out/: DO_functions_core0.py
MicroPython/Analog In/: AI_benchmark_core1.py  AI_functions_core0.py  AI_functions_core1.py  AI_functions_core1_MPY.mpy
MicroPython/Digital Out/: DO_benchmark_core0.py  DO_benchmark_core1_MPY.py  DO_functions_core0.py
Raspberry Pi B+/Python/Digital Out/: DO_benchmark_core0.py  DO_functions_core0.py
Raspberry Pi Pico/C++/Analog In/: AI_benchmark.c  CMakeLists.txt
Raspberry Pi Pico/C++/Digital Out/: CMakeLists.txt  DO_benchmark.c
Raspberry Pi Pico/MicroPython/: README.md  find_mpy_version.py
Raspberry Pi Pico/MicroPython/Analog In/: AI_benchmark_core0.py  AI_benchmark_core0_MPY.py  AI_benchmark_core1_MPY.py  AI_functions_core0_MPY.mpy
Raspberry Pi Pico/MicroPython/Analog Out/: AO_benchmark_core0.py  AO_benchmark_core1.py
Raspberry Pi Pico/MicroPython/Digital Out/: DO_benchmark_core0_MPY.py  DO_benchmark_core1.py  DO_functions_core1.py
Raspberry Pi Pico/MicroPython/Memory/: max_numpy_floats.py
(+4 files in other folders)
